syntax = "proto3";

package storage;

service Storage {
  rpc Put (PutStorage) returns (StorageResponse);
  rpc Get (GetStorage) returns (StorageResponse);
  rpc Delete (DeleteStorage) returns (StorageResponse);
  rpc List (ListStorage) returns (ListResponse);
}

// struct for get storage request function
message GetStorage {
  string key = 1;
}

// struct for delete storage request function
message DeleteStorage {
  string key = 1;
}

// struct for put storage request function
message PutStorage {
  string key = 1;
  string val = 2;
}

// struct for list storage request function
message ListStorage {

}

// struct for storage object key response
message StorageResponse {
  string key = 1;
  string val = 2;
}

// struct for list storage response function
message ListResponse {
  repeated StorageInfo list = 1;
}

// struct part of ListResponse Struct
message StorageInfo {
  string key = 1;
  string val = 2;
}

// struct to store Storage Key in ETCD
message StorageKey {
  string key = 1;
}
